RESOLVED FIXED143114
Crash in CGContextShowGlyphsWithAdvances when passing kCGFontIndexInvalid
https://bugs.webkit.org/show_bug.cgi?id=143114
Summary Crash in CGContextShowGlyphsWithAdvances when passing kCGFontIndexInvalid
Myles C. Maxfield
Reported 2015-03-26 15:12:58 PDT
Crash in CGContextShowGlyphsWithAdvances when passing kCGFontIndexInvalid
Attachments
Patch (2.66 KB, patch)
2015-03-26 15:14 PDT, Myles C. Maxfield
no flags
Patch for landing (2.53 KB, patch)
2015-03-26 15:53 PDT, Myles C. Maxfield
buildbot: commit-queue-
Archive of layout-test-results from ews102 for mac-mavericks (3.10 MB, application/zip)
2015-03-26 16:04 PDT, Build Bot
no flags
Archive of layout-test-results from ews106 for mac-mavericks-wk2 (3.16 MB, application/zip)
2015-03-26 16:09 PDT, Build Bot
no flags
Archive of layout-test-results from ews104 for mac-mavericks-wk2 (3.25 MB, application/zip)
2015-03-26 16:19 PDT, Build Bot
no flags
Archive of layout-test-results from ews103 for mac-mavericks (3.10 MB, application/zip)
2015-03-26 16:43 PDT, Build Bot
no flags
Patch (5.15 KB, patch)
2015-03-30 17:38 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2015-03-26 15:14:27 PDT
Myles C. Maxfield
Comment 2 2015-03-26 15:53:50 PDT
Created attachment 249525 [details] Patch for landing
Build Bot
Comment 3 2015-03-26 16:04:46 PDT
Comment on attachment 249517 [details] Patch Attachment 249517 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6063666696814592 New failing tests: fast/forms/file/hidden-input-file.html fast/regions/overflow/overflow-in-uniform-regions-dynamic.html fast/css/type-attribute-style-sharing-5.html fast/css/data-attribute-style-sharing-6.html css3/flexbox/csswg/flex-direction-modify.html fast/regions/overflow/overflow-in-uniform-regions.html fast/regions/positioning/fixed-in-named-flow-position-changed.html fast/text/empty-shadow.html fast/css/type-attribute-style-sharing-7.html fast/regions/positioning/positioned-objects-in-regions.html fast/css/first-line-style-for-before-after-content.html fast/css/data-attribute-style-sharing-5.html fast/css/type-attribute-style-sharing-6.html fast/css/data-attribute-style-sharing-7.html
Build Bot
Comment 4 2015-03-26 16:04:50 PDT
Created attachment 249531 [details] Archive of layout-test-results from ews102 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-mavericks Platform: Mac OS X 10.9.5
Build Bot
Comment 5 2015-03-26 16:09:05 PDT
Comment on attachment 249517 [details] Patch Attachment 249517 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/6699789471186944 New failing tests: fast/forms/file/hidden-input-file.html fast/regions/overflow/overflow-in-uniform-regions-dynamic.html fast/css/type-attribute-style-sharing-5.html fast/css/data-attribute-style-sharing-6.html css3/flexbox/csswg/flex-direction-modify.html fast/regions/overflow/overflow-in-uniform-regions.html fast/regions/positioning/fixed-in-named-flow-position-changed.html fast/text/empty-shadow.html fast/css/type-attribute-style-sharing-7.html fast/regions/positioning/positioned-objects-in-regions.html fast/css/first-line-style-for-before-after-content.html fast/css/data-attribute-style-sharing-5.html fast/css/type-attribute-style-sharing-6.html fast/css/data-attribute-style-sharing-7.html
Build Bot
Comment 6 2015-03-26 16:09:12 PDT
Created attachment 249533 [details] Archive of layout-test-results from ews106 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Build Bot
Comment 7 2015-03-26 16:19:21 PDT
Comment on attachment 249525 [details] Patch for landing Attachment 249525 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/6584390142394368 New failing tests: fast/forms/file/hidden-input-file.html fast/regions/overflow/overflow-in-uniform-regions-dynamic.html fast/css/data-attribute-style-sharing-7.html fast/css/type-attribute-style-sharing-5.html fast/css/data-attribute-style-sharing-6.html css3/flexbox/csswg/flex-direction-modify.html fast/regions/overflow/overflow-in-uniform-regions.html fast/text/empty-shadow.html fast/css/type-attribute-style-sharing-7.html fast/regions/positioning/positioned-objects-in-regions.html fast/css/first-line-style-for-before-after-content.html fast/css/data-attribute-style-sharing-5.html fast/css/type-attribute-style-sharing-6.html fast/regions/positioning/fixed-in-named-flow-position-changed.html
Build Bot
Comment 8 2015-03-26 16:19:23 PDT
Created attachment 249536 [details] Archive of layout-test-results from ews104 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Build Bot
Comment 9 2015-03-26 16:43:01 PDT
Comment on attachment 249525 [details] Patch for landing Attachment 249525 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/4988729261293568 New failing tests: fast/forms/file/hidden-input-file.html fast/regions/overflow/overflow-in-uniform-regions-dynamic.html fast/css/type-attribute-style-sharing-5.html fast/css/data-attribute-style-sharing-6.html css3/flexbox/csswg/flex-direction-modify.html fast/regions/overflow/overflow-in-uniform-regions.html fast/regions/positioning/fixed-in-named-flow-position-changed.html fast/text/empty-shadow.html fast/css/type-attribute-style-sharing-7.html fast/regions/positioning/positioned-objects-in-regions.html fast/css/first-line-style-for-before-after-content.html fast/css/data-attribute-style-sharing-5.html fast/css/type-attribute-style-sharing-6.html fast/css/data-attribute-style-sharing-7.html
Build Bot
Comment 10 2015-03-26 16:43:04 PDT
Created attachment 249541 [details] Archive of layout-test-results from ews103 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5
Myles C. Maxfield
Comment 11 2015-03-30 17:38:28 PDT
Simon Fraser (smfr)
Comment 12 2015-03-31 10:08:13 PDT
Comment on attachment 249785 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=249785&action=review > Source/WebCore/platform/graphics/WidthIterator.cpp:151 > +#if PLATFORM(MAC) || PLATFORM(IOS) PLATFORM(COCOA)
WebKit Commit Bot
Comment 13 2015-03-31 11:54:13 PDT
Comment on attachment 249785 [details] Patch Clearing flags on attachment: 249785 Committed r182192: <http://trac.webkit.org/changeset/182192>
WebKit Commit Bot
Comment 14 2015-03-31 11:54:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.