Crash in CGContextShowGlyphsWithAdvances when passing kCGFontIndexInvalid https://bugs.webkit.org/show_bug.cgi?id=143114

This is a workaround for <rdar://problem/20230073>. Please remove when it is no longer necessary.

Reviewed by Alexey Proskuryakov.

Covered by:
compositing/regions/floated-region-with-transformed-child.html
compositing/regions/floated-region-with-transformed-child-expected.html
fast/regions/counters/extract-ordered-lists-in-regions-explicit-counters-005.html
fast/regions/counters/extract-ordered-lists-in-regions-explicit-counters-005-expected.html
fast/regions/overflow/overflow-content-transform-rotate.html
fast/regions/overflow/overflow-content-transform-rotate-expected.html

* platform/graphics/GlyphBuffer.h:
(WebCore::GlyphBuffer::shrink): Performing shaping may remove glyphs, so we need to shrink the GlyphBuffer.
* platform/graphics/WidthIterator.cpp:
(WebCore::applyFontTransforms): Filter out kCGFontIndexInvalid.
(WebCore::WidthIterator::advanceInternal): Moved code into applyFontTransforms, and trigger the
shrink of the GlyphBuffer.


Canonical link: https://commits.webkit.org/161292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182192 268f45cc-cd09-0410-ab3c-d52691b4dbfc